# ipk_assignments

./: .editorconfig  .gitignore  Doxyfile
Blatt02/Abgabe/: fibonacci.cc  mitternachtsformel.cc  votieren.txt
Blatt03/: Aufgabe1.txt  potenzen  potenzen.cc  power.cc  power.h  powermain.cc  root.cc  root2  test  wurzel
Blatt04/: a1.cc  a2.cc  hull.txt
blatt02/Abgabe/: collatz.cc  mitternachtsformel.cc
blatt03/: Aufgabe1.txt  votieren.txt  wurzel.cc
blatt04/: a1.cc  a2.cc  aufgabe1.cc  aufgabe1a.cc  aufgabe2.cc
blatt05/: CMakeLists.txt  letterfrequencies.cc  normal  normal.cc  readvector  readvector.cc  statistics.cc  statistics.hh  uniform  uniform.cc
blatt05/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  normal  readvector  uniform
blatt05/header/: charfrequency.hh  statistics.hh
blatt05/src/: charfrequency.cc  io.cc  statistics.cc
blatt05/tests/: test_mean.cc  test_median.cc
blatt06/: CMakeLists.txt  plot.cc
blatt06/header/: canvas.hh  point.hh  polygon.hh
blatt06/include/: canvas.hh  point.hh  polygon.hh
blatt06/src/: a1e.cc  canvas.cc  pgm.cc  plot.cc  point.cc  polygon.cc
blatt06/tests/: a1d.cc  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test_canvas.cc  test_self_intersecting.cc  testcorners.cc
blatt07/: CMakeLists.txt  votieren.txt
blatt07/a1/: CMakeLists.txt  point  point.hh  test  test.cc
blatt07/a2/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  normal.cc  readvector.cc  statistics.hh  statisticsdriver.cc  uniform.cc
blatt07/header/: point.hh  statistics.hh
blatt07/include/: point.hh  statistics.hh
blatt07/src/: normal.cc  readvector.cc  uniform.cc
blatt07/test/: a1e.cc
blatt07/tests/: statisticsdriver.cc  testpoint.cc
blatt08/: CMakeLists.txt
blatt08/include/: IterationResult.hh  canvas.hh  iterationresult  iterationresult.hh  point.hh
blatt08/src/: a1  a1.cc  canvas.cc  fractals.cc  mandelbrot.cc  pgm.cc
blatt09/: CMakeLists.txt  debug-1.cc  debug-3.cc  votieren.txt
blatt09/debug-with-errors/: CMakeLists.txt  debug-2.cc
blatt09/debug-without-errors/: debug-2.cc
blatt10/: CMakeLists.txt  votieren.txt
blatt10/include/: AnalysisPlugin.hh  Filter.hh  Frequencies.hh  LetterFreq.hh  filters.hh  frequencies.hh  frequencysource.hh  letterfrequencies.hh  plugins.hh
blatt10/test/: a1bc.cc  a1bs.cc  t1.cc  t2.cc
blatt10/tests/: test_letterfreq_compl.cc  test_letterfreq_simple.cc  test_stringfreq_compl.cc
blatt11/: App_Planets.cc  App_Rain.cc  Application.cc  CMakeLists.txt  votieren.txt
blatt11/include/: body.hh  point.hh  step.hh
blatt11/src/: nbody.cc
blatt11/test/: ptest.cc
